fix: image wrapper flickering

--- a/components/common/image/image.module.scss
+++ b/components/common/image/image.module.scss
@@ -10,7 +10,7 @@
 }
 
 .fade {
-  transition: opacity 200ms ease;
+  transition: opacity 250ms ease;
   opacity: 0;
 
   &.loaded {
